--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   flutter:
     sdk: flutter
   google_fonts: ^3.0.1
+  image_cropper: ^3.0.1
+  image_picker: ^0.8.6
   shared_preferences: ^2.0.15
 dev_dependencies:
   flutter_lints: ^2.0.0
