--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -24,11 +24,22 @@
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+
         </activity>
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
-        <meta-data
+        <!-- <meta-data
             android:name="flutterEmbedding"
-            android:value="2" />
+            android:value="2" /> -->
+        <activity
+            android:name="com.yalantis.ucrop.UCropActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+                <!-- Don't delete the meta-data below.
+                     This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
+                <meta-data
+                    android:name="flutterEmbedding"
+                    android:value="2" 
+        />
     </application>
 </manifest>
