--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,14 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_auth: ^4.1.1
   firebase_core: ^2.1.1
+  firebase_storage: ^11.0.5
   flutter:
     sdk: flutter
+  flutter_image_compress: ^1.1.3
   google_fonts: ^3.0.1
   image_cropper: ^3.0.1
-  image_picker: ^0.8.6
+  image_picker: ^0.8.1
+  path_provider: ^2.0.11
   shared_preferences: ^2.0.15
 dev_dependencies:
   flutter_lints: ^2.0.0
