final avatar function

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,12 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_image_compress: ^1.1.3
+  font_awesome_flutter: ^10.2.1
   google_fonts: ^3.0.1
   image_cropper: ^3.0.1
   image_picker: ^0.8.1
   path_provider: ^2.0.11
+  rounded_loading_button: ^2.1.0
   shared_preferences: ^2.0.15
 dev_dependencies:
   flutter_lints: ^2.0.0
