--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   image_cropper: ^3.0.1
   image_picker: ^0.8.1
   path_provider: ^2.0.11
+  persistent_bottom_nav_bar: ^5.0.2
   rounded_loading_button: ^2.1.0
   shared_preferences: ^2.0.15
 dev_dependencies:
